--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-dev-server": "^5.2.0"
   },
   "dependencies": {
+    "axios": "^1.8.2",
     "coco-mvc": "^0.0.1-alpha202503091723"
   }
 }
