--- a/package.json
+++ b/package.json
@@ -10,28 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-proposal-decorators": "^7.25.9",
-    "@babel/plugin-transform-react-jsx": "^7.25.9",
-    "@babel/preset-typescript": "^7.26.0",
-    "@cocojs/cli": "^0.0.1-alpha202503091723",
+    "@cocojs/cli": "^0.0.1-alpha202503302111",
     "@cocojs/typescript-transformer": "^0.0.10",
-    "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "fs-extra": "^11.2.0",
-    "html-webpack-plugin": "^5.6.3",
-    "postcss": "^8.4.49",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.17",
-    "ts-loader": "^9.5.2",
     "ts-patch": "3.1.2",
-    "typescript": "5.3.3",
-    "webpack": "^5.97.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "typescript": "5.3.3"
   },
   "dependencies": {
     "axios": "^1.8.2",
-    "coco-mvc": "^0.0.1-alpha202503091723"
+    "coco-mvc": "^0.0.1-alpha202503302111"
   }
 }
